Fix mobile site-title alignment and bump mobile font size
Remove the leftover negative margin-left on .header-nav that pushed the
nav links left of the site title on mobile, so they now align flush.
Also increase the mobile-only base font size from 19px to 21px.

--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ div.link {
 
 @media (max-width: 480px) {
     :root {
-        font-size: 19px;
+        font-size: 21px;
     }
 
     .header-inner {
@@ -478,7 +478,7 @@ div.link {
     }
 
     .header-nav {
-        margin-left: -0.55rem;
+        margin-left: 0;
     }
 
     .header-nav ul {
